# sm-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  CMakeSettings.json  CMakeSettings.json.bak  README.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/: cmake-version4git.cmake  hl2sdk.cmake  sourcemod.cmake  x86-linux-sm.cmake
src/: debugger.cpp  debugger.h  extension.cpp  extension.h  smsdk_config.h  utlbuffer.cpp  utlbuffer.h
src/sourcepawn/compiler/: amx.h  assembler.cpp  emitter.cpp  errors.cpp  expressions.cpp  lexer.cpp  libpawnc.cpp  lstring.cpp  lstring.h  memfile.cpp  memfile.h  optimizer.cpp  osdefs.h  parser.cpp  pawncc.cpp  sc.h  sc1.cpp  sc2.cpp  sc3.cpp  sc4.cpp  sc5.cpp  sc6.cpp  sc7-in.scp  sc7.cpp  sclist.cpp  sctracker.cpp  sctracker.h  scvars.cpp
src/sourcepawn/include/: sp_vm_api.h  sp_vm_debug_api.h
src/sourcepawn/vm/: code-allocator.cpp  code-allocator.h  compiled-function.h  file-utils.cpp  legacy-image.h  method-info.h  plugin-context.cpp  plugin-runtime.cpp  plugin-runtime.h  scripted-invoker.cpp  scripted-invoker.h  smx-v1-image.cpp  smx-v1-image.h  stack-frames.h
src/sourcepawn/vm/x86/: jit_x86.cpp
